assets/css/pre_fare/alert-banner.scss
.alert-banner {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  filter: drop-shadow(0 30px 20px rgb(0 0 0 / 25%));

  /* Background colors */
  &--blue {
    background-color: #b3c5e4;
  }

  &--red {
    background-color: #f4bfbb;
  }

  &--orange {
    background-color: #fadcb3;
  }

  &--yellow {
    background-color: #fff7bf;
  }

  &--green {
    background-color: #b3dac5;
  }
}

.alert-banner__attention-text {
  font-weight: 700;
}

.alert-banner__route-pill--short {
  height: 96px;
  margin: 0 20px;
}

.alert-banner__route-pill--short--multiple-routes {
  height: 96px;
  margin: 0 20px;

  &:first-of-type {
    margin: 0 10px 0 20px;
  }

  &:last-of-type {
    margin: 0 20px 0 10px;
  }
}

.alert-banner__route-pill--long {
  margin: 16.2px 0 0.8px;
}

.alert-banner--large--two-routes {
  padding: 31px 65px 42px;
}

.alert-banner--large--one-route {
  padding: 86px 74px 102px;
}

.alert-banner--small {
  align-items: center;
  padding: 52px 88px;
}

